ingress/test/pods/fb-api.yaml
kind: Pod
apiVersion: v1
metadata:
  name: fb-api
  labels:
    app: fb-api 
spec:
  containers:
    - name: fb-api
      image: peejayaccts/fb-api:latest #Dockerhub image
      imagePullPolicy: Always
      ports:
      - containerPort: 3002 #Exposes the port 8080 of the container

---
kind: Service
apiVersion: v1
metadata:
  name: fb-api-service
  namespace: default
spec:
  type: NodePort 
  selector:
    app: fb-api
  ports:
  - name: fb-api-port
    protocol: TCP
    port: 3002
