ingress/test/pods/sms-api.yaml
kind: Pod
apiVersion: v1
metadata:
  name: sms-api
  labels:
    app: sms-api 
spec:
  containers:
    - name: sms-api
      image: peejayaccts/sms-api:latest #Dockerhub image
      imagePullPolicy: Always
      ports:
      - containerPort: 3003 #Exposes the port 8080 of the container

---
kind: Service
apiVersion: v1
metadata:
  name: sms-api-service
  namespace: default
spec:
  type: NodePort 
  selector:
    app: sms-api
  ports:
  - name: sms-api-port
    protocol: TCP
    port: 3003
